# kahypar

./: .a.kateproject.kate-swp  .codecov.yml  .cproject  .gitignore  .gitignore~  .gitmodules  .kateproject  .project  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists.txt.orig  CNAME  CONTRIBUTING.md  Doxyfile.in  Gemfile  MANIFEST.in  README.md  _config.yml  appveyor.yml  create_taskfile.sh  create_taskfile_better_gain_ref.sh  create_taskfile_different_gains.sh  create_taskfile_different_gains_better_refiner.sh  et --merge ORIG_HEAD  index.html  index.md  lgtm.yml  setup.py  sonar-project.properties  start_hmetis.py  start_patoh.py
kahypar/application/: #kahypar.cc#  .#kahypar.cc  .Rhistory  CMakeLists.txt  KaHyPar.cc  command_line_options.h  fixed_vertex_generator.h  kahypar.cc  kahyparE.cc  kahypar_dist_evo.cc  kahypar_evo.cc  kahypar_timelimit.cc
lib/: CMakeLists.txt  cmake_uninstall.cmake.in  libkahypar.cc  libkahypar.pc.in
python/: CMakeLists.txt  module.cpp
python/tests/: test_kahypar.py
src/application/: CMakeLists.txt  KaHyPar.cc  KaHyPar.cc.LOCAL.5471.cc  KaHyPar.cc.orig  PlantedPartitions.cc  \
src/playground/: CMakeLists.txt  hmetis_lib_test.cc  pq_test.cc
src/tools/: CMakeLists.txt  CnfToHgrConversion.h  CnfToHgrConverter.cc  GraphToHgrConverter.cc  HgrToBipartiteGraphMLConverter.cc  HgrToBipartiteMetisGraphConverter.cc  HgrToEdgeListConversion.h  HgrToEdgeListConverter.cc  HgrToGraphMLConverter.cc  HgrToHypergraphMLConverter.cc  HgrToPaToHConverter.cc  HypergraphAnalyzer.cc  HypergraphStats.cc  MtxToHgrConversion.cc  MtxToHgrConversion.h  MtxToHgrConverter.cc  RandomFunctions.cc  RandomFunctions.h  VerifyPartition.cc  cnf_to_hgr_converter_test.cc  hgr_to_edge_list_conversion_test.cc  mtx_to_hgr_converter_test.cc
tests/: CMakeLists.txt
tests/datastructure/: CMakeLists.txt  Hypergraph_TestFixtures.h  binary_heap_test.cc  community_hypergraph_test.cc  community_hypergraph_test_fixtures.h  community_subhypergraph_test.cc  compact_connectivity_set_test.cc  concurrent_batch_queue_test.cc  flow_network_test.cc  graph_test.cc  hypergraph_test.cc  hypergraph_test_fixtures.h  incidence_set_test.cc  kway_priority_queue_test.cc  lock_based_hypergraph_test.cc  lock_based_hypergraph_test_fixtures.h  parallel_hypergraph_test.cc  priority_queue_test.cc  segment_tree_test.cc  sparse_map_test.cc  sparse_set_test.cc  union_find_test.cc
tests/delta/: CMakeLists.txt  kahypar_delta_tests.cc
tests/end_to_end/: CMakeLists.txt  kahyparE_integration_tests.cc  kahypar_integration_tests.cc  kahypar_kway_cut_test.cc  kahypar_test_fixtures.h
tests/end_to_end/configs/: km1_direct_kway_gecco18.ini  test.ini
tests/end_to_end/test_instances/: ISPD98_ibm01.artificial.hgr  example_hypergraph_fixed_vertex_partitioning_with_custom_block_weights.hgr  fixed_vertices_for_example_hypergraph_fixed_vertex_partitioning_with_custom_block_weights.fix
tests/interface/: CMakeLists.txt  interface_test.cc
tests/interface/test_instances/: corrupted_hypergraph_with_invalid_pin.hgr
tests/io/: CMakeLists.txt  HypergraphIO_TestFixtures.h  evolutionary_io_test.cc  hypergraph_io_test.cc  hypergraph_io_test_fixtures.h
tests/io/test_instances/: corrupted_hypergraph_with_identical_pins_and_invalid_edges.hgr  corrupted_hypergraph_with_multiple_identical_pins.hgr  unweighted_hypergraph.hgr.edgelist  unweighted_hypergraph.hgr.graph.hgr  unweighted_hypergraph.hgr.graphml  unweighted_hypergraph.hgr.k3.graphml  weighted_hyperedges_and_hypernodes_hypergraph.hgr
tests/lib/core/: CMakeLists.txt  static_multi_dispatch_factory_test.cc
tests/lib/datastructure/: binary_heap_test.cc  hypergraph_test.cc  sparse_map_test.cc  sparse_set_test.cc
tests/lib/io/: CMakeLists.txt  HypergraphIO_TestFixtures.h  hypergraph_io_test.cc
tests/lib/meta/: static_multi_dispatch_factory_test.cc
tests/meta/: CMakeLists.txt  static_multi_dispatch_factory_test.cc
tests/partition/: CMakeLists.txt  bin_packing_test.cc  fixed_vertex_test.cc  metrics_test.cc  partitioner_test.cc
tests/partition/coarsening/: .#full_heavy_edge_coarsener_test.cc  CMakeLists.txt  VertexPairCoarsener_TestFixtures.h  first_choice_coarsener_test.cc  full_heavy_edge_coarsener_test.cc  full_vertex_pair_coarsener_test.cc  heavy_edge_rater_test.cc  heuristic_heavy_edge_coarsener_test.cc  heuristic_vertex_pair_coarsener_test.cc  lazy_update_heavy_edge_coarsener_test.cc  lazy_vertex_pair_coarsener_test.cc  parallel_ml_community_coarsener_test.cc  rater_test.cc  vertex_pair_coarsener_test_fixtures.h  vertex_pair_rater_test.cc
tests/partition/evolutionary/: CMakeLists.txt  ISPD98_ibm09.hgr  TestHypergraph  (+7 more)
tests/regression/: CMakeLists.txt  kahypar_regression_tests.cc
tests/utils/: CMakeLists.txt  input_validation_test.cc  math_test.cc  thread_pool_test.cc
tools/: CMakeLists.txt  CnfToHgrConverter.cc  GraphToHgrConverter.cc  HgrToBipartiteGraphMLConverter.cc  HgrToBipartiteMetisGraphConverter.cc  HgrToEdgeListConversion.h  HgrToEdgeListConverter.cc  HgrToHypergraphMLConverter.cc  HgrToPaToHConverter.cc  HypergraphAnalyzer.cc  HypergraphStats.cc  MtxToHgrConversion.cc  MtxToHgrConverter.cc  RandomFunctions.cc  VerifyPartition.cc  bookshelf_to_hgr_converter.cc  bookshelf_to_hgr_converter.h  bookshelf_to_hgr_converter_test.cc  bookshelf_to_weighted_hgr_converter.cc  calculate_degree_pin_distribution.cc  calculate_epsilon.cc  cnf_to_hgr_conversion.h  cnf_to_hgr_converter.cc  cnf_to_hgr_converter_test.cc  compute_neighborhood_sizes.cc  create_weighted_hgr.cc  evaluate_mondriaan_partition.cc  graph_to_hgr_converter.cc  hgr_to_bipartite_graphml_converter.cc  hgr_to_bipartite_metis_graph_converter.cc  hgr_to_edge_list_conversion_test.cc  hgr_to_edge_list_converter.cc  hgr_to_edgelist_conversion.h  hgr_to_hypergraphml_converter.cc  hgr_to_mondriaan_mtx_converter.cc  hgr_to_mtx_conversion.h  hgr_to_mtx_conversion_test.cc  hgr_to_mtx_converter.cc  hgr_to_patoh_converter.cc  hmetis_lib_test.cc  (+14 more)
tools/test_instances/: CoordinateSymmetric.mtx  SampleSAT.cnf  WeightedMtxExample.mtx  WeightedMtxExampleCorrect.hgr  bookshelf_format.nets  mondriaan_example.hgr
(+9167 files in other folders)
