add_subdirectory(partition/evolutionary)
add_subdirectory(meta)
add_subdirectory(end_to_end)
add_subdirectory(regression)
add_subdirectory(datastructure)
add_subdirectory(io)
add_subdirectory(interface)
add_subdirectory(utils)
add_subdirectory(partition)
add_subdirectory(partition/preprocessing)
add_subdirectory(partition/coarsening)
add_subdirectory(partition/initial_partitioning)
add_subdirectory(partition/refinement)

