add_executable(MtxToHgr mtx_to_hgr_converter.cc mtx_to_hgr_conversion.cc)
set_property(TARGET MtxToHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET MtxToHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(MtxToLAMAHgr lama_converter.cc mtx_to_hgr_conversion.cc)
set_property(TARGET MtxToLAMAHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET MtxToLAMAHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(GraphToHgr graph_to_hgr_converter.cc)
set_property(TARGET GraphToHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET GraphToHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(CnfToHgr cnf_to_hgr_converter.cc)
target_link_libraries(CnfToHgr ${Boost_LIBRARIES})
set_property(TARGET CnfToHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET CnfToHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HypergraphStats hypergraph_statistics.cc)
set_property(TARGET HypergraphStats PROPERTY CXX_STANDARD 17)
set_property(TARGET HypergraphStats PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HypergraphAnalyzer hypergraph_analyzer.cc)
set_property(TARGET HypergraphAnalyzer PROPERTY CXX_STANDARD 17)
set_property(TARGET HypergraphAnalyzer PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToHypergraphML hgr_to_hypergraphml_converter.cc)
set_property(TARGET HgrToHypergraphML PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToHypergraphML PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToBipartiteGraphML hgr_to_bipartite_graphml_converter.cc)
set_property(TARGET HgrToBipartiteGraphML PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToBipartiteGraphML PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToBipartiteMetisGraph hgr_to_bipartite_metis_graph_converter.cc)
set_property(TARGET HgrToBipartiteMetisGraph PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToBipartiteMetisGraph PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToEdgeList hgr_to_edge_list_converter.cc)
set_property(TARGET HgrToEdgeList PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToEdgeList PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToPaToH hgr_to_patoh_converter.cc)
set_property(TARGET HgrToPaToH PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToPaToH PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(VerifyPartition verify_partition.cc)
set_property(TARGET VerifyPartition PROPERTY CXX_STANDARD 17)
set_property(TARGET VerifyPartition PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(CreateWeightedHgr create_weighted_hgr.cc)
set_property(TARGET CreateWeightedHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET CreateWeightedHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(BookshelfToHgr bookshelf_to_hgr_converter.cc)
set_property(TARGET BookshelfToHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET BookshelfToHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(RepeatsToHgr repeats_to_hgr_converter.cc)
set_property(TARGET RepeatsToHgr PROPERTY CXX_STANDARD 17)
set_property(TARGET RepeatsToHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(DegreePinDistribution calculate_degree_pin_distribution.cc)
set_property(TARGET DegreePinDistribution PROPERTY CXX_STANDARD 17)
set_property(TARGET DegreePinDistribution PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(ComputeNeighborHoodSizes compute_neighborhood_sizes.cc)
set_property(TARGET ComputeNeighborHoodSizes PROPERTY CXX_STANDARD 17)
set_property(TARGET ComputeNeighborHoodSizes PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToMtx hgr_to_mtx_converter.cc)
set_property(TARGET HgrToMtx PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToMtx PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(HgrToMondriaanMtx hgr_to_mondriaan_mtx_converter.cc)
set_property(TARGET HgrToMondriaanMtx PROPERTY CXX_STANDARD 17)
set_property(TARGET HgrToMondriaanMtx PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(EvaluateMondriaanPartition evaluate_mondriaan_partition.cc mtx_to_hgr_conversion.cc)
set_property(TARGET EvaluateMondriaanPartition PROPERTY CXX_STANDARD 17)
set_property(TARGET EvaluateMondriaanPartition PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(CalculateRelaxedEpsilon calculate_epsilon.cc)
set_property(TARGET CalculateRelaxedEpsilon PROPERTY CXX_STANDARD 17)
set_property(TARGET CalculateRelaxedEpsilon PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(RemoveHeavyNodes remove_heavy_nodes.cc)
set_property(TARGET RemoveHeavyNodes PROPERTY CXX_STANDARD 17)
set_property(TARGET RemoveHeavyNodes PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(BookshelfToWeightedHgr bookshelf_to_weighted_hgr_converter.cc)
set_property(TARGET BookshelfToWeightedHgr PROPERTY CXX_STANDARD 14)
set_property(TARGET BookshelfToWeightedHgr PROPERTY CXX_STANDARD_REQUIRED ON)
add_executable(MtxToWeightedHgr mtx_to_weighted_hgr_converter.cc mtx_to_hgr_conversion.cc)
set_property(TARGET MtxToWeightedHgr PROPERTY CXX_STANDARD 14)
set_property(TARGET MtxToWeightedHgr PROPERTY CXX_STANDARD_REQUIRED ON)



# This test needs test instance files, so we copy them to the corresponding build dir
file(COPY test_instances DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_gmock_test(bookshelf_to_hgr_converter_test bookshelf_to_hgr_converter_test.cc)
add_gmock_test(mtx_to_hgr_converter_test mtx_to_hgr_converter_test.cc mtx_to_hgr_conversion.cc)
add_gmock_test(cnf_to_hgr_converter_test cnf_to_hgr_converter_test.cc)
add_gmock_test(hgr_to_edge_list_conversion_test hgr_to_edge_list_conversion_test.cc)
add_gmock_test(repeats_to_hgr_conversion_test repeats_to_hgr_conversion_test.cc)
add_gmock_test(hgr_to_mtx_test hgr_to_mtx_conversion_test.cc)


#set_source_files_properties(hmetis_lib_test.cc PROPERTIES COMPILE_FLAGS -m32)
#add_executable(hmetis_lib_test hmetis_lib_test.cc)
#set_target_properties(hmetis_lib_test PROPERTIES LINK_FLAGS -m32)
#target_link_libraries(hmetis_lib_test "/home/schlag/hmetis-1.5-linux/libhmetis.a")
